CHANGES.TXT for Ublu Midrange and Mainframe Life Cycle Extension Language
Copyright (c) 2017, Jack J. Woehr jwoehr@softwoehr.com http://www.softwoehr.com
All rights reserved.

1.1.6
-----
Commands
* cim for Common Information Model (added)
* calljava
	* -class
	* -forname
* eval
	* now does it as Long
* ftp command rewritten, new specifications
	* previous ftp command is now called 'oldftp'
* streamf new command for stream files on local system
* string -pad
* tuple
	* -type returns class object
	* handle the tuple stack on -true -false -null
	
Examples
* clHelp.ublu
* delspoolf.ublu

1.1.5 2016-12-31
-----
General
* Taylor C. Richberger taywee@gmx.com has begun enhancing Ublu code and fixing
various shortfalls, e..g, see his work on the calljava and dpoint commands.

System
* default tuples
	* @true
	* @false
* interpreter
	* allow quoted strings as function arguments
	* allow blocks as function arguments

Commands
* general
	* more cleanup
	* ublu.includepath property management
* individual commands
	* calljava
		* properly deals with interfaces
	* db
		* -columnnames
		* bug: -bytes
	* dpoint
		* WARNING status now has message
		* dpoint allows a crit and warn alert comparator to work without value 
	* dta command for data areas
	* file
	    * -createdds
	    * -createfmt
	    * -lock
	    * -unlock
	    * -writeall
	    * -commitstart
	    * -commit
	    * -rollback
	    * -commitend
		* change -pos BF to B
	* gensh
		* -strictPosix
		* gensh was generating bad documentary headers when passed plainwords.
        * -includepath
    * include
        * relative includes try to take ublu.includepath property into account
    * record
    	* -create
    	* -getcontents
    	* -getfield[byname]
    	* -getfields
    	* -setcontents works more correctly
    * rs
        * -fileblob
        * -getblob
        * -lgetblob
        * -tofile
        * more destinations for blobs
    * tuple
    	* account for the variety of as400 classes
    	* -autonomic

Extensions